<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/margin"
    >

    <FrameLayout
        android:id="@+id/mainGameLayout"
        android:layout_width="341dp"
        android:layout_height="423dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"
        >

    </FrameLayout>

    <ImageView
        android:id="@+id/secondTurtleImage"
        android:layout_width="80dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@mipmap/turtle_ingame_2" />

    <ImageView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:contentDescription="@string/desc"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="@+id/mainGameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainGameLayout"
        app:srcCompat="@mipmap/start" />

    <TextView
        android:id="@+id/CounterTextViewMain"
        android:layout_width="match_parent"
        android:layout_height="397dp"

        android:textColor="@android:color/black"
        android:textSize="80sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/levelUpText"
        android:layout_width="197dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="1dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:background="@drawable/margin"
        android:backgroundTint="@color/black_overlay"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/mainGameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".7">

                    <TextView
                        android:id="@+id/editText7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Score"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="12dp">

                    </TextView>


                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:background="@drawable/box_curved">

                    <TextView
                        android:id="@+id/scoreTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foregroundGravity="top"
                        android:gravity="top"

                        android:textColor="@color/cardview_light_background">

                    </TextView>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:baselineAligned="false">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Time"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="12dp">

                    </TextView>
                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:background="@drawable/box_curved">

                    <TextView
                        android:id="@+id/timeValueTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foregroundGravity="top"
                        android:gravity="top"

                        android:textColor="@color/cardview_light_background">

                    </TextView>


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".7">

                    <TextView
                        android:id="@+id/counterValueText"
                        android:layout_width="103dp"
                        android:layout_height="24dp"
                        android:text="@string/Counter"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="12dp">

                    </TextView>
                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:background="@drawable/box_curved">

                    <TextView
                        android:id="@+id/CounterTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/cardview_light_background">

                    </TextView>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <TextView
                        android:id="@+id/buttonSpeedText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:text="@string/Speed"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="12dp">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:background="@drawable/box_curved">

                    <TextView
                        android:id="@+id/buttonSpeedView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/cardview_light_background">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".55">

                    <TextView
                        android:id="@+id/staticText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="10dp"
                        android:text="@string/bPerSec"
                        android:textColor="@color/cardview_light_background" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="281dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="1"
        android:src="@drawable/capture_randombuttons_new2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />
</android.support.constraint.ConstraintLayout>
